--- a/task1/build.gradle
+++ b/task1/build.gradle
@@ -1,9 +1,12 @@
 plugins {
-	id 'org.springframework.boot' version '2.1.2.RELEASE'
+	id 'org.springframework.boot' version '1.5.3.RELEASE'
 	id 'java'
 }
 
+
+
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'eclipse'
 
 group = 'task1'
 version = '0.0.1-SNAPSHOT'
@@ -14,7 +17,8 @@ repositories {
 }
 
 dependencies {
-	compile("org.springframework.boot:spring-boot-starter-web")
+	
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	 compile("org.springframework.boot:spring-boot-starter-web")
 }
