--- a/task1/build.gradle
+++ b/task1/build.gradle
@@ -18,7 +18,15 @@ repositories {
 
 dependencies {
 	
+	 compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // Use MySQL Connector-J
+    compile 'mysql:mysql-connector-java'
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	 compile("org.springframework.boot:spring-boot-starter-web")
+	     compile ('mysql:mysql-connector-java:6.0.+')
+	 
 }
