--- a/task1/bin/main/application.properties
+++ b/task1/bin/main/application.properties
@@ -2,3 +2,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.username=root
 spring.datasource.password=2491
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
