--- a/task1/bin/main/application.properties
+++ b/task1/bin/main/application.properties
@@ -1,5 +1,10 @@
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.username=root
 spring.datasource.password=2491
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#Connection Pool Configuration
+spring.datasource.tomcat.max-wait=20000
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-idle=20
+spring.datasource.tomcat.min-idle=15 
