--- a/task1/src/main/resources/application.properties
+++ b/task1/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.datasource.username=root
 spring.datasource.password=2491
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+customer.datasource.url = jdbc:mysql://localhost:3306/db2
+customer.datasource.username = root
+customer.datasource.password = 2491
+customer.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+
