--- a/task1/build.gradle
+++ b/task1/build.gradle
@@ -25,7 +25,9 @@ dependencies {
 	 testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	 compile("org.springframework.boot:spring-boot-starter-web")
 	 compile ('mysql:mysql-connector-java:6.0.+')
-	 compile('org.springframework.boot:spring-boot-starter-jdbc:1.2.7.RELEASE')    
+	 compile('org.springframework.boot:spring-boot-starter-jdbc:1.2.7.RELEASE')  
+	 compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
+  	 compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'  
 	  
 }
 
