--- a/task2/pom.xml
+++ b/task2/pom.xml
@@ -39,17 +39,33 @@
         <dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.16.16</version>
 			<scope>provided</scope>
 		</dependency>
     	
     	<dependency>
    			 <groupId>javax.persistence</groupId>
     		<artifactId>javax.persistence-api</artifactId>
-    		<version>2.2</version>
+    		</dependency>
+
+    	<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-configuration-processor</artifactId>
+    		<optional>true</optional>
+    	</dependency>
+    	
+    	<dependency>
+	        <groupId>com.google.code.gson</groupId>
+	        <artifactId>gson</artifactId>
+	        <scope>compile</scope>
+  	    </dependency>
+  	    
+  	    <dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
 		</dependency>
-    
-    </dependencies>
+  	    
+	 </dependencies>
     
     
 	
